# ai_playground

./: .gitignore  CLAUDE.md  README.md  _quarto.yml  index.qmd  mkdocs.yml  pyproject.toml  theme-dark.scss  theme-light.scss  theme.scss
.claude/skills/: benchmark.md  explain.md  new-experiment.md  new-notebook.md  onboard.md  session.md  stuck.md
.github/workflows/: docs.yml
assets/: progress-map.html
configs/: medium.yaml  small.yaml  tiny.yaml
docs/: 2407.20018_method-details.html  CLOUD_SETUP.md  CONCEPTS.md  HOW_TO_READ.md  LEARNING_PATH.md  PAPERS.md  PERFORMANCE_EXERCISES.md  PROGRESS_TEMPLATE.md  PROJECT.md  SESSIONS.md  SESSIONS_SPEC.md  SESSION_PROTOCOL.md  VIDEOS.md  VIRTUAL_GPU_SPEC.md  index.md
notebooks/00_dnn_refresher/: 00_neurons_and_mlps.ipynb  01_backprop_micrograd.ipynb  02_training_loop.ipynb  03_softmax_crossentropy.ipynb
notebooks/01_transformer_internals/: 00_transformer_overview.ipynb  00_transformer_overview_rendered.html  00_transformer_overview_rendered.ipynb  01_attention_mechanisms.ipynb  02_mixture_of_experts.ipynb
notebooks/02_training_optimization/: 00_training_from_scratch.ipynb  01_learning_rate_schedules.ipynb  02_mixed_precision.ipynb  03_gradient_accumulation.ipynb  04_adamw_from_scratch.ipynb
notebooks/04_inference_optimization/: 00_mini_vllm.ipynb
notebooks/06_agents/: 01_tool_use.ipynb  (+2 more)
projects/: README.md  conftest.py
scripts/: benchmark.py  launch_distributed.py  profile_model.py  train.py
tests/: test_attention.py  test_fundamentals.py  test_gpusim.py  test_training.py  test_transformer.py  test_vgpu.py
(+107 files in other folders)
